--- a/css/style.css
+++ b/css/style.css
@@ -203,13 +203,13 @@ p {
 }
 
 .authContainer {
-    height: 200px;
+    height: auto;
     width: 300px;
     border: rgb(255, 122, 189) 2px solid;
     border-radius: 10px;
     margin: auto;
-    margin-top: 14%;
-    margin-bottom: 14%;
+    margin-top: 12%;
+    margin-bottom: 12%;
     background: linear-gradient( rgb(132, 255, 255) ,rgb(221, 168, 223),rgb(132, 255, 255));
 
 }
@@ -220,8 +220,8 @@ p {
 
 .authForm > input {
     margin-right: 0;
-    margin-top: 10px;
-    margin-bottom: 0;
+    margin-top: 2px;
+    margin-bottom: 20px;
     width: 200px;
     height: 30px;
 }
