--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,21 @@ p {
     flex-direction: row;
 }
 
+.Post {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 100px;
+    background: radial-gradient(rgb(252, 156, 255),rgb(191, 121, 219));
+}
+
+.Posts {
+    width: 100%;
+    background: rgb(191, 121, 219);
+    display: flex;
+    flex-direction: column;
+}
+
 .listOfRandoms {
     border: 1px solid rgb(162, 66, 240);
 }
